--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Laura Cleveland",
   "dependencies": {
+    "@fontsource/inter": "^4.5.15",
     "gatsby": "^5.5.0",
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-manifest": "^5.5.0",
@@ -19,10 +20,7 @@
     "gatsby-transformer-sharp": "^5.5.0",
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "typeface-inter": "^3.18.1",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
